--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "github-emoji": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
-    "nodemon": "^2.0.22"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "slugify": "^1.6.6"
   }
 }
