--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 5000
 MONGODB_URL = mongodb://localhost:27017/cartify
 JWT_SECRET = mysecret
+MAIL_USER = "gotipratik8418@gmail.com"
+MP = "clbwkvysnfunfhsr"
+
