--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 5000
 MONGODB_URL = mongodb://localhost:27017/cartify
 JWT_SECRET = mysecret
-MAIL_USER = "gotipratik8418@gmail.com"
-MP = "clbwkvysnfunfhsr"
+MAIL_USER = "abc@gmail.com"
+MP = "__"
